<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SOS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textView1">Enter the phone number of the recipient here</string>
    <string name="textView2">Message</string>
    <string name="preview_sms">Send your text message here!</string>
	<string name="button_send">SEND</string>
	<string name="firstname">First Name:</string>
    <string name="secondname">Second Name:</string>
    <string name="DOB">Date of Birth:</string>
    <string name="Age">Age:</string>
    <string name="gender">Gender</string>
    <string name="number">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="relation">Relation:</string>
    <string name="button">Save</string>
    <string name="name">Name:</string>
    <string name="Msg">Message:</string>
    <string name="About">About</string>
    
</resources>
