<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView1" />
        <EditText
            android:id="@+id/phone_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView2" />
       	<EditText
       	    android:layout_width="fill_parent"
       	    android:layout_height="wrap_content"
       	    android:id="@+id/preview_message"
       	    android:hint="@string/preview_sms"
       	    android:lines="10" />
       	
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_text"
            android:layout_marginTop="20dp"
            android:text="@string/button_send" />
                
    </LinearLayout>
    

</ScrollView>

